# OurDataframe

./: .gitignore  CMakeLists.txt  ODf  ODf.cpp  ODf.hpp  README.md  our-dataframe  our-dataframe.cpp  our-dataframe.hpp  tempCodeRunnerFile.cpp
DataSource/: TSEAMCET_2022_finalphase.csv  fakeData.csv
